Fix layout issues in mobile (#4) (#5)
* Fix navbar issues

* Fix mobile view issues in home screen

* Fix footer layout issues in mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,17 +1,3 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- */
-
 @import 'bootstrap';
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
@@ -43,8 +29,7 @@ header#main-navigation {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  padding: 0.5rem 0;
+  width: 100vw;
   z-index: 999;
 
   .nav-item {
@@ -60,9 +45,12 @@ header#main-navigation {
   .nav-item a:hover {
     color: $primary-color;
   }
+  button.navbar-toggler {
+    padding: 0;
+  }
 }
 body.background_image #main-navigation {
-  background-color: rgba(0, 0, 0, 0.25);
+  background-color: rgba(0, 0, 0, 0.75);
 }
 .navbar button, .navbar button:active, .navbar button:focus {
   outline: 0 none;
